<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.back.refactor.RefactorProductFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/start_line"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/end_line"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/top_line"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:hint="@string/product_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@+id/start_line"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintTop_toBottomOf="@+id/top_line"
        app:layout_constraintBottom_toTopOf="@+id/bottom_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/bottom_name"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:hint="@string/product_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@+id/start_line"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintTop_toBottomOf="@+id/bottom_name"
        app:layout_constraintBottom_toTopOf="@+id/bottom_price">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/price"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/bottom_price"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:hint="@string/product_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@+id/start_line"
        app:layout_constraintEnd_toStartOf="@+id/end_line"
        app:layout_constraintTop_toBottomOf="@+id/bottom_price"
        app:layout_constraintBottom_toTopOf="@+id/bottom_quantity">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/quantity"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/bottom_quantity"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/top_safe"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create"
        android:text="@string/create"
        app:layout_constraintStart_toEndOf="@+id/start_line"
        app:layout_constraintEnd_toStartOf="@id/end_line"
        app:layout_constraintTop_toBottomOf="@+id/top_safe"/>

</androidx.constraintlayout.widget.ConstraintLayout>