<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:translationZ="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.65"
            android:id="@+id/line_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_name"
            android:gravity="center"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/bottom_name"
            style="@style/style_product_name_card_front_end"
            android:text="@string/product_name"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.15"
            android:id="@+id/bottom_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@+id/bottom_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/line_vertical"
            card_view:layout_constraintBottom_toTopOf="@+id/bottom_price"
            style="@style/style_static_text_view_card_front_end"
            android:text="@string/product_price"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:gravity="end"
            card_view:layout_constraintTop_toBottomOf="@+id/bottom_name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/line_vertical"
            card_view:layout_constraintBottom_toTopOf="@+id/bottom_price"
            android:id="@+id/product_price"
            style="@style/style_dinamic_text_view_card_front_end"
            android:text="@string/product_price"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.3"
            android:id="@+id/bottom_price"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            card_view:layout_constraintTop_toBottomOf="@+id/bottom_price"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/line_vertical"
            card_view:layout_constraintBottom_toTopOf="@+id/bottom_quantity"
            style="@style/style_static_text_view_card_front_end"
            android:text="@string/product_quantity"/>
        <TextView
            android:id="@+id/product_quantity"
            style="@style/style_dinamic_text_view_card_front_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:text="@string/product_quantity"
            card_view:layout_constraintBottom_toTopOf="@+id/bottom_quantity"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/line_vertical"
            card_view:layout_constraintTop_toBottomOf="@+id/bottom_price" />
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.45"
            android:id="@+id/bottom_quantity"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.8"
            android:id="@+id/top_button"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy"
            card_view:layout_constraintTop_toBottomOf="@+id/top_button"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:text="@string/buy"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>